<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F1EC">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/tenorsans"
        android:letterSpacing="0.05"
        android:text="@string/forgot_password_title"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_margin="60dp"
        app:layout_constraintTop_toTopOf="parent" />
<!-- Enter your code -->
    <TextView
        android:id="@+id/tv_enter_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_code"
        android:fontFamily="@font/tenorsans"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"/>

    <!-- OTP -->

    <TextView
        android:id="@+id/tv_otp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/tenorsans"
        android:text="@string/otp_label"
        android:textColor="#AFAFAF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_code" />
    <!-- Resend -->

    <TextView
        android:id="@+id/tv_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend"
        android:fontFamily="@font/tenorsans"
        android:textColor="#C67A5C"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_otp_label"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"/>

    <View
        android:id="@+id/otp_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#CFCBC5"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_otp_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <!-- Info text about OTP -->

    <TextView
        android:id="@+id/tv_sent_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/tenorsans"
        android:text="@string/otp_sent_info"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otp_line" />
    <!-- CONTINUE -->
    <Button
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/continue_upper"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/tenorsans"
        app:layout_constraintTop_toBottomOf="@id/tv_sent_otp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- NOT NOW -->
    <TextView
        android:id="@+id/tv_not_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:letterSpacing="0.1"
        android:text="@string/not_now"
        android:textAllCaps="true"
        android:textColor="#6E6E6E"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_continue" />

</androidx.constraintlayout.widget.ConstraintLayout>
