<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="134dp"
        android:fontFamily="@font/tenorsans"
        android:text="@string/change_password_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/current_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/tenorsans"
        android:hint="@string/current_password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#979797"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_password" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/tenorsans"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#979797"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/current_password"
        app:layout_constraintStart_toStartOf="@id/current_password"
        app:layout_constraintTop_toBottomOf="@id/current_password" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/tenorsans"
        android:hint="@string/confirm_new_password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#979797"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/current_password"
        app:layout_constraintStart_toStartOf="@id/current_password"
        app:layout_constraintTop_toBottomOf="@id/new_password" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/tenorsans"
        android:text="@string/confirm_button_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
